DPO-2393 Päivitetään tiesään tietovirran ProtoBuf määritys (#155)
* DPO-2393 Päivitetään tiesään tietovirran ProtoBuf määritys
- Added optional reliability