@@ -1,5 +1,7 @@
 package fi.livi.digitraffic.tie.dto.v1;
 
+import static io.swagger.v3.oas.annotations.media.Schema.RequiredMode.*;
+
 import java.time.Instant;
 import java.util.List;
 
@@ -8,6 +10,7 @@ import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonPropertyOrder;
 
+import fi.livi.digitraffic.tie.model.roadstation.SensorValueReliability;
 import io.swagger.v3.oas.annotations.media.Schema;
 import jakarta.persistence.Id;
 
@@ -20,24 +23,25 @@ public interface SensorValueDtoV1 {
     @JsonIgnore
     Long getSensorValueId();
 
-    @Schema(description = "Measured sensor value", required = true)
+    @Schema(description = "Measured sensor value", requiredMode = REQUIRED)
     double getValue();
 
-    @Schema(description = "Measured sensor value unit", required = true)
+    @Schema(description = "Measured sensor value unit", requiredMode = REQUIRED)
     String getUnit();
 
+    @Schema(description = "Id of the road station", requiredMode = REQUIRED)
     @JsonProperty(value = "stationId", required = true)
     long getRoadStationNaturalId();
 
-    @Schema(description = "Sensor type id (naturalId)", required = true)
+    @Schema(description = "Sensor type id (naturalId)", requiredMode = REQUIRED)
     @JsonProperty(value = "id")
     long getSensorNaturalId();
 
-    @Schema(description = "Sensor name", required = true)
+    @Schema(description = "Sensor name", requiredMode = REQUIRED)
     @JsonProperty(value = "name")
     String getSensorNameFi();
 
-    @Schema(description = "Sensor short name", required = true)
+    @Schema(description = "Sensor short name", requiredMode = REQUIRED)
     @JsonProperty(value = "shortName")
     String getSensorShortNameFi();
 
@@ -63,20 +67,23 @@ public interface SensorValueDtoV1 {
     @JsonIgnore
     Instant getModified();
 
-    @Schema(description = "Measurement time", required = true)
+    @Schema(description = "Measurement time", requiredMode = REQUIRED)
     Instant getMeasuredTime();
+
+    @Schema(description = "Measurement reliability information", requiredMode = NOT_REQUIRED)
+    SensorValueReliability getReliability();
 
 
     static Instant getStationLatestMeasurement(final List<SensorValueDtoV1> sensorValues) {
         if (sensorValues != null && !sensorValues.isEmpty()) {
-            return sensorValues.get(0).getStationLatestMeasuredTime();
+            return sensorValues.getFirst().getStationLatestMeasuredTime();
         }
         return Instant.EPOCH;
     }
 
     static Instant getStationLatestUpdated(final List<SensorValueDtoV1> sensorValues) {
         if (sensorValues != null && !sensorValues.isEmpty()) {
-            return sensorValues.get(0).getStationLatestModifiedTime();
+            return sensorValues.getFirst().getStationLatestModifiedTime();
         }
         return Instant.EPOCH;
     }
